# WeatherGenerator

./: .gitignore  CODE-of-CONDUCT.md  CONTRIBUTING.md  INSTALL.md  NOTICE  README.md  logs  output  plots  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  initiative.yml  task.yml
.github/workflows/: ci.yml  issue_assign.yml  pr_assign_labels.yml
config/: compare_config_list.yml  config_pretrain_era5+imerg_logtrans.yml  config_pretrain_era5+imerg_logtrans1.yml  config_pretrain_era5+imerg_logtrans2.yml  config_pretrain_era5+imerg_logtrans3.yml  default_config.yml  default_config_dino.yml  default_config_jepa.yml  default_config_radklim.yml  default_forecast_config.yml  ifs_fesom_config.yml  mixed.yml
config/evaluate/: config_zarr2cf.yaml  eval_config.yml
config/profiling/: annotations.json
config/streams/cerra_seviri/: cerra.yml  seviri.yml
config/streams/cerra_seviri/era5_nppatms_synop/: cerra.yml
config/streams/era5_1deg/: cerra.yml  era5.yml  imerg.yml
config/streams/era5_1deg1/: era5.yml  imerg.yml
config/streams/era5_netcdf/: era5.yml  era5_kerchunk.yml  era5_netcdf.yml
config/streams/era5_nppatms_synop/: era5.yml  npp_atms.yml  synop.yml
config/streams/fesom/: fesom.yml  fesom_elem.yml  ifs.yml
config/streams/icon/: icon.yml
config/streams/igra/: igra.yml
config/streams/imerg/: README.md  imerg.yml
config/streams/radklim/: README.md  radklim.yml  radklim_net.yml
config/streams/streams_anemoi/: era5.yml
config/streams/streams_anemoi_era5_split/: era5_q.yml  era5_t.yml  era5_uv.yml  era5_z.yml
config/streams/streams_mixed/: era5.yml
integration_tests/: small1.yaml  small1_test.py  small_multi_stream.yaml  small_multi_stream_test.py
integration_tests/streams/: era5_small.yml
integration_tests/streams_multi/: era5_small.yml  npp_atms.yml  synop.yml
scripts/: actions.sh  check_gh_issue.py  check_tomls.py
src/weathergen/: run_train.py
src/weathergen/datasets/: batch.py  data_reader_anemoi.py  data_reader_anemoi_logsinh.py  data_reader_anemoi_logtrans.py  data_reader_anemoi_logtrans_eps.py  data_reader_base.py  data_reader_fesom.py  data_reader_imerg.py  data_reader_kerchunk.py  data_reader_netcdf.py  data_reader_obs.py  data_reader_radklim.py  data_reader_radklim_net.py  eps.py  masking.py  multi_stream_data_sampler.py  ssl_strategies.py  stream_data.py  tokenizer.py  tokenizer_forecast.py  tokenizer_masking.py  tokenizer_utils.py  tokenizer_utils_test.py  utils.py  utils_test.py  view_builder.py
src/weathergen/model/: attention.py  blocks.py  ema.py  embeddings.py  encoder.py  engines.py  layers.py  model.py  model_interface.py  norms.py  parametrised_prob_dist.py  positional_encoding.py  ssl_target_processing.py  utils.py
src/weathergen/train/: loss.py  loss_calculator.py  lr_scheduler.py  target_and_aux_module_base.py  target_and_aux_ssl_teacher.py  trainer.py  trainer_base.py  utils.py
src/weathergen/train/loss_modules/: __init__.py  loss_functions.py  loss_module_base.py  loss_module_physical.py  loss_module_ssl.py
src/weathergen/utils/: better_abc.py  cli.py  compare_run_configs.py  config.py  distributed.py  logger.py  metrics.py  metrics_test.py  plot_training.py  train_logger.py  utils.py  validation_io.py
stac/: abi-goes16.jsonnet  cerra.jsonnet  common.jsonnet  era5_v8.jsonnet  functions.libsonnet  fy3a.jsonnet  fy3b.jsonnet  fy3c.jsonnet  ifs_fesom_atmos.jsonnet  ifs_fesom_ocean_elem.jsonnet  ifs_fesom_ocean_node.jsonnet  imerg.jsonnet  merged.jsonnet  metopa.jsonnet  metopb.jsonnet  nppatms.jsonnet  opera.jsonnet  seviri.jsonnet  synop.jsonnet
stac/jsons/: abigoes.json  catalogue.json  cerra.json  era5v8.json  fy3.json  fy3a.json  fy3b.json  fy3c.json  ifs-fesom_atmos.json  ifs-fesom_ocean_elem.json  ifs-fesom_ocean_node.json  imerg.json  metopa.json  metopb.json  npp-atms.json  opera.json  seviri.json  synop.json
tests/: test_cli.py  test_config.py
